2011-08-11  Andrew Cohen  <cohen@andy.bu.edu>

	* nnimap.el (nnimap-transform-headers): BODYSTRUCTURE for messages of
	type MESSAGE and subtype RFC822 is slightly different from those of
	type TEXT.

2011-08-05  Andrew Cohen  <cohen@andy.bu.edu>

	* gnus-sum.el (gnus-summary-refer-article): Warp to article. This
	allows article-referral to work from an nnir group.

2011-08-04  Andrew Cohen  <cohen@andy.bu.edu>

	* gnus.el (registry-ignore): Add nnir groups to the ignore-list.

2011-08-04  Daiki Ueno  <ueno@unixuser.org>

	* mml1991.el (mml1991-epg-find-usable-key)
	(mml1991-epg-find-usable-secret-key): New function.
	(mml1991-epg-sign): Check if signing key is usable.
	(mml1991-epg-encrypt): Check if encrypting key is usable (bug#8955).

2011-08-03  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (nnir-read-server-parm): Add an argument to restrict to
	server-variables only. This should fix a bug introduced with commit
	e1889675b7f4adf057833c5513c9374134c4e053.
	(nnir-run-query): 'nnir-search-engine should not be set from the global
	environment.

2011-08-02  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (nnir-search-thread): Position point on referring article
	line.
	(nnir-warp-to-article): Clean up summary buffers.

	* nnimap.el (nnimap-request-thread): Whitespace fix.

2011-08-02  Steve Purcell  <steve@sanityinc.com>  (tiny change)

	* nnimap.el (nnimap-get-groups): Decode "&" correctly.

2011-08-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* starttls.el (starttls-available-p): Renamed from
	`starttls-any-program-available' and changed return convention.

2011-07-31  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnmaildir.el (nnmaildir-request-accept-article): Don't call
	`unix-sync' unless it's defined.

2011-07-31  Marcus Harnisch  <marcus.harnisch@gmx.net>  (tiny change)

	* gnus-art.el (gnus-article-stop-animations): Use `elt' instead of
	`aref' for XEmacs compatibiltiy.

2011-07-31  Lars Magne Ingebrigtsen  <larsi@gnus.org>
