@@ -1,3 +1,12 @@
+2011-08-12  Sam Steingold  <sds@gnu.org>
+
+	* gnus-score.el (gnus-score-find-alist): Keep the score files already
+	in the reverse order to avoid modifying the cache with `nreverse'.
+	(gnus-all-score-files): Do not modify the value returned by
+	`gnus-score-find-alist' because it lives in a cache variable.
+	(gnus-current-home-score-file): No need to `nreverse' the return value
+	of `gnus-score-find-alist', it is already in the correct order.
+
 2011-08-11  Andrew Cohen  <cohen@andy.bu.edu>
 
 	* nnimap.el (nnimap-transform-headers): BODYSTRUCTURE for messages of
@@ -98,7 +107,7 @@
 
 	* nnir.el (gnus-group-make-nnir-group): Allow optional search query
 	argument.
-	(gnus-group-make-nnir-group,nnir-request-group,nnir-run-query): Use
+	(gnus-group-make-nnir-group, nnir-request-group, nnir-run-query): Use
 	`nnir-address' to handle server info rather than passing an arg.
 
 	* nnimap.el (nnimap-make-thread-query): New utility function to format
